# GameServer_Rust

./: .gitignore  .qovery.yml  README.md
battleserver/: Cargo.toml
battleserver/config/: config.conf
battleserver/src/: main.rs  task_timer.rs
battleserver/src/battle/: battle.rs  battle_buff.rs  battle_cter.rs  battle_enum.rs  battle_flow.rs  battle_helper.rs  battle_player.rs  battle_skill.rs  battle_trigger.rs  market.rs  mission.rs  mod.rs
battleserver/src/handlers/: battle_handler.rs  mod.rs
battleserver/src/mgr/: battle_mgr.rs  mod.rs
battleserver/src/net/: mod.rs  tcp_client.rs
battleserver/src/robot/: goal_think.rs  mod.rs  robot_action.rs  robot_data.rs  robot_helper.rs  robot_skill.rs  robot_task_mgr.rs  robot_trigger.rs
battleserver/src/room/: character.rs  map_data.rs  member.rs  mod.rs  room.rs
battleserver/template/: BattleLimitTime.json  Buff.json  Cell.json  Character.json  Robot.json  Season.json  Skill.json  SkillJudge.json  Soul.json  SummaryAward.json  TileMap.json  WorldBoss.json
gateserver/: Cargo.toml  linux.bat
gateserver/config/: config.conf
gateserver/configs/: config.conf
gateserver/protos/: base.proto
gateserver/src/: entity.rs  main.rs  mgr.rs  net.rs  protos.rs  prototools.rs
gateserver/src/auth/: mod.rs  steam_auth.rs
gateserver/src/entity/: gateuser.rs  mod.rs
gateserver/src/mgr/: channel_mgr.rs  channelmgr.rs  cmd_code_mgr.rs  gatemgr.rs  mod.rs  thread_pool_mgr.rs
gateserver/src/net/: http.rs  mod.rs  packet.rs  tcp_client.rs  tcp_server.rs  websocket.rs  websocket_channel.rs
gateserver/src/protos/: base.rs
gg_check/: Cargo.toml  server.config  zqwz-467410-406042b26096.json
gg_check/src/: main.rs
gg_check/src/check/: login.rs  mod.rs  pay.rs
gg_check/src/entity/: user.rs
gg_check/src/http/: check_login.rs  check_pay.rs  mod.rs  test.rs
gg_check/src/test/: login.rs  mod.rs  pay.rs
httpserver/: Cargo.toml  server.config
httpserver/src/: db.rs  http_server.rs  main.rs  wx.rs
httpserver/src/entity/: mod.rs  server_info.rs  user.rs  white_user.rs  wx_user_subscribe.rs
httpserver/src/handler/: add_server_handler.rs  game_yearly_handler.rs  mod.rs  modify_server_handler.rs  modify_white_user_handler.rs  questionnaire_handler.rs  reload_handler.rs  server_list_handler.rs  test_handler.rs  wx_game_message_handler.rs  wx_game_subscribe_handler.rs
net_test/: .project  Cargo.toml
net_test/protos/: base.proto  protocol.proto
net_test/src/: main.rs  map.rs  message_io.rs  mio_test.rs  sig_rec.rs  tcp_client.rs  test_async.rs  test_tokio.rs  web.rs  web_socket.rs
net_test/src/protos/: base.rs  message.rs  protocol.rs
net_test/template/: Buff.json  Cell.json  Character.json  Constants.json  Emoji.json  Item.json  Merchandise.json  Mission.json  Skill.json  SkillJudge.json  SkillScope.json  TileMap.json  WorldCell.json
rankserver/: Cargo.toml
rankserver/config/: config.conf
rankserver/src/: handler.rs  main.rs  task_timer.rs
rankserver/src/db/: dbtool.rs  mod.rs
rankserver/src/mgr/: mod.rs  rank_mgr.rs
rankserver/src/net/: tcp_server.rs
rankserver/template/: Buff.json  Cell.json  Character.json  Constants.json  League.json  Punish.json  Robot.json  Skill.json  TileMap.json  WorldBoss.json  WorldCell.json
register/: Cargo.toml
register/src/: entity.rs  main.rs  mgr.rs  net.rs
register/src/entity/: NetClient.rs
register/src/mgr/: id_contants.rs  register_mgr.rs
register/src/net/: tcp_server.rs
relay_server/: Cargo.toml  server.config
relay_server/src/: main.rs
relay_server/src/http/: gateway_handler.rs  get_json_config.rs  http_server.rs  mod.rs  test_handler.rs
relay_server/src/ws/: ws.rs
robotserver/: Cargo.toml
robotserver/config/: config.conf
robotserver/src/: fsm.rs  goal_ai.rs  main.rs  robot.rs  status.rs
robotserver/src/battle/: battle.rs  enums.rs  map_data.rs  mod.rs
robotserver/src/fsm/: miner.rs  mod.rs  status.rs
robotserver/src/goal_ai/: attack_target_goal_evaluator.rs  cter.rs  goal.rs  goal_attack_target.rs  goal_combined.rs  goal_enum.rs  goal_evaluator.rs  goal_status.rs  goal_think.rs  mod.rs  target_system.rs
robotserver/src/handlers/: mod.rs  robot_handler.rs
robotserver/src/mgr/: mod.rs  robot_mgr.rs
robotserver/src/net/: tcp_server.rs
robotserver/src/robot/: cter.rs  (+3 more)
roomserver/: Cargo.toml
roomserver/config/: config.conf
roomserver/configs/: config.conf
roomserver/src/: battle.rs  entity.rs  error_return.rs  handlers.rs  main.rs  mgr.rs  net.rs  task_timer.rs  template.rs
roomserver/template/: Buff.json  Cell.json  CellBuff.json  Character.json  CharacterSkill.json  Constants.json  ConstantsForClient.json  Emoji.json  Item.json  League.json  Robot.json  Season.json  Skill.json  SkillJudge.json  SkillScope.json  TileMap.json  WorldBoss.json
rust-admin/: .gitignore  Cargo.toml  README.md  UPDATE.md  nginx.conf.default
rust-admin/scripts/: 1.0.sql  example-vlog.sql  export-db.sh
rust-admin/src/: main.rs  server.rs
server/: Cargo.toml
server/config/: config.conf
server/configs/: config.conf
server/protos/: base.proto  message.proto  protocol.proto
server/src/: db.rs  entity.rs  helper.rs  main.rs  mgr.rs  net.rs  protos.rs  prototools.rs  redispool.rs  template.rs
server/template/: Buff.json  Cell.json  CellBuff.json  Character.json  Constants.json  Emoji.json  Item.json  Market.json  Merchandise.json  Mission.json  Punish.json  Robot.json  Skill.json  SkillScope.json  TileMap.json  TriggerTime.json  WorldBoss.json  WorldCell.json
tools/: Cargo.toml
tools/examples/: byte_buf.rs  http_client.rs  http_server.rs  tcp_client.rs  tcp_message_io_client.rs  tcp_message_io_server.rs  tcp_server.rs
tools/protos/: base.proto  battle.proto  protocol.proto  robot.proto  room.proto  rpc.proto  server_protocol.proto
tools/src/: actor.rs  binary.rs  cmd_code.rs  conf.rs  excel.rs  http.rs  json.rs  lib.rs  macros.rs  my_log.rs  net_message_io.rs  protos.rs  redis_pool.rs  result.rs  rpc_client.rs  rpc_server.rs  tcp.rs  tcp_message_io.rs  tcp_tokio.rs  template.rs  templates.rs  thread_pool.rs  util.rs  ws.rs
(+271 files in other folders)
