[package]
name = "battleserver"
version = "0.1.0"
authors = ["tangjian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 #优化等级最大
lto = true #链接时优化,所有crate贯穿所有进行优化
codegen-units = 1 #将每一个crate作为一整块进行编译

[dependencies]
rayon = "1.3.1"
async-trait = "0.1.41"
log="0.4"
async-std = "1.7"
protobuf="2.20.0"
protoc-rust = "2.20.0"
protobuf-codegen="2.20.0"
lazy_static = "1.4"
serde = {version="1.0.105",features = ["derive"]}
serde_json = "1.0.41"
futures = "0.3.6"
anyhow = "1.0.31"
crossbeam = "0.8"
rand = "0.8"
num_enum = "0.5.1"
scheduled-thread-pool = "0.2.5"
chrono = "0.4"
tools = { path = "../tools" }
