[package]
name = "gateserver"
version = "0.1.0"
authors = ["reison1218 <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log="0.4.8"
chrono = "0.4.9"
simplelog = "0.7.3"
ws="0.9.0"
num_cpus="1.10.1"
threadpool="1.7.1"
protobuf = "2.8.1"
protoc-rust = "2.8.1"
protobuf-codegen = "2.8.1"
