[package]
name = "gateserver"
version = "0.1.0"
authors = ["reison1218 <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto=true
codegen-units = 1

[dependencies]
ws="0.9.1"
#postgres ={version="0.15.2"}
num_cpus="1.10.1"
protobuf="2.14.0"
threadpool="1.7.1"
log="0.4.8"
chrono = "0.4.9"
redis="0.15.1"
serde_json = "1.0.53"
serde = "1.0.110"
lazy_static = "1.4.0"
futures = "0.3.5"
async-std = "1.7"
http-types = "2.5"
async-h1 = "2.1"
anyhow = "1.0.31"
async-trait = "0.1.41"
tools = { path = "../tools" }
