[package]
name = "net_test"
version = "0.1.0"
authors = ["reison <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 #优化等级最大
lto = "fat" #链接时优化,所有crate贯穿所有进行优化
codegen-units = 1 #将每一个crate作为一整块进行编译

[dependencies]
libc = "0.2.68"
ws="0.9.1"
num_cpus="1.10.1"
protobuf="2.14.0"
async-std = "1.6"
http-types = "2.5"
async-h1 = "2.1"
futures = "0.3.5"
serde_json = "1.0.53"
serde = {version="1.0.110",features = ["derive"]}
env_logger = "0.7.1"
threadpool="1.7.1"
mio = "0.6.21"
mio-extras = "2.0"
net2 = "0.2.33"
miow = "0.3.3"
ntapi = "0.3.3"
envmnt = "0.8.2"
rand = "0.7.3"
lazy_static = "1.4.0"
scroll = "0.10.1"
anyhow = "1.0.31"
dirs = "2.0.2"
chrono = "0.4.11"
log="0.4.8"
rayon = "1.3.1"
generic-array = "0.14.2"
crossbeam ="0.8"
piston-ai_behavior = "0.32.0"
num_enum = "0.5.1"
scheduled-thread-pool = "0.2.5"
actix = "0.10.0"
tokio = { version="0.3.1" , features = ["full"] }
hostname = "0.3.1"
concurrent-queue = "1.2.2"
bytes = "0.6.0"
async-trait = "0.1.41"
tools = { path = "../tools" }
