[package]
name = "net_test"
version = "0.1.0"
authors = ["reison <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#rustflags="-C target-cpu=native -C lto -o -C target-feature=+avx2 -C codegen-units=1 -C opt-level=3"


[profile.release]
opt-level = 3 #优化等级最大
lto = true #链接时优化,所有crate贯穿所有进行优化
codegen-units = 1 #将每一个crate作为一整块进行编译

[profile.dev]
split-debuginfo = "unpacked"

[features]
default=["bar","ss"]
bar=[]
ss=[]



[build-dependencies]
tonic-build = "0.4.2"

[dependencies]
libc = "0.2.68"
ws="0.9.1"
num_cpus="1.10.1"
protobuf="2.14.0"
async-std = "1.9"
http-types = "2.5"
async-h1 = "2.1"
futures = "0.3"
serde_json = "1.0.53"
serde = {version="1.0.110",features = ["derive"]}
env_logger = "0.8.3"
threadpool="1.7.1"
mio = "0.7"
mio-extras = "2.0"
net2 = "0.2.33"
miow = "0.3.3"
ntapi = "0.3.3"
envmnt = "0.9.0"
rand = "0.8"
lazy_static = "1.4.0"
scroll = "0.10.1"
anyhow = "1.0.31"
dirs = "3.0.2"
log="0.4.8"
rayon = "1.3.1"
generic-array = "0.14.2"
crossbeam ="0.8"
piston-ai_behavior = "0.32.0"
num_enum = "0.5.1"
scheduled-thread-pool = "0.2.5"
actix = "0.12.0"
tokio = { version="1.6.0" , features = ["full"] }
async-trait = "0.1.41"
chrono = "0.4"
slab = "0.4.2"
time = "0.2.23"
xh = "0.10.0"
message-io = "0.14.2"
tools = { path = "../tools" }
#Zellij