[package]
name = "rankserver"
version = "0.1.0"
authors = ["tangjian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 #优化等级最大
lto = true #链接时优化,所有crate贯穿所有进行优化
codegen-units = 1 #将每一个crate作为一整块进行编译

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
protobuf="2.23.0"
crossbeam = "0.8"
rayon = "1.5"
async-trait = "0.1.41"
futures = "0.3.9"
log="0.4.8"
chrono = "0.4.11"
lazy_static = "1.4.0"
serde = {version="1.0.105",features = ["derive"]}
serde_json = "1.0.41"
anyhow = "1.0.31"
async-std = "1.7"
mysql="25.0.0"
tools = { path = "../tools" }