[package]
name = "register"
version = "0.1.0"
authors = ["reison <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf="2.14.0"
async-std="1.5.0"
log="0.4.8"
tools = { path = "../tools" }