[package]
name = "relay_server"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 #优化等级最大
lto = true #链接时优化,所有crate贯穿所有进行优化
codegen-units = 1 #将每一个crate作为一整块进行编译


[dependencies]
serde_json = "1.0.87"
serde = "1.0.173"
lazy_static = "1.5.0"
log = "0.4.19"
anyhow = "1.0.31"
chrono = "0.4.41"
async-lock = "3.4.0"
smol = "2.0.2"
scheduled-thread-pool = "0.2.7"
tokio = { version = "1.45.1", features = ["full"] }
once_cell = "1.16.0"
tokio-tungstenite = "0.27.0"
futures = "0.3"
url = "2.0"
tools = { path = "../tools" }
