[package]
name = "rust-admin"
version = "1.1.1"
authors = ["Han <hanting.hou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web-actors = "2.0.0"
awc = "1.0.1"
env_logger = "0.6"
bytes = "0.5.3"
actix-web = "2.0"
actix-rt = "1.0"
tera = "1.0"

rand = "0.6"
mysql = "17.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
#actix-cors = "0.2"
#actix-service = "1.0"
regex = "1.3"
actix-session = "0.3.0"
sys-info = "0.5"
toml = "0.5"
oss = "0.2"
actix-files = "0.2"
actix-multipart = "0.2"
futures = "0.3"
percent-encoding = "2.1"

[dependencies.fluffy]
git = "https://github.com/houhanting/fluffy.git" 
branch = "master"
#release模式请去掉以下debug
features = ["debug"]
