[package]
name = "server"
version = "0.1.0"
authors = ["GXHINF8OL4LO0IV\\Administrator <tijay830@163.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3 #release
lto = "fat"
codegen-units = 1

[dependencies]
#postgres ="0.15.2"
num_cpus="1.10.1"
threadpool="1.7.1"
log="0.4.8"
chrono = "0.4.11"
mysql="16.1.0"
serde = {version="1.0.105",features = ["derive"]}
serde_json = "1.0.41"
lazy_static = "1.4.0"
futures = "0.3.5"
async-std = "1.6"
http-types = "2.5"
async-h1 = "2.1"
protobuf="2.14.0"
anyhow = "1.0.31"
rayon = "1.3.1"
crossbeam = "0.8"
tools = { path = "../tools" }
#Rayon
