[package]
name = "tools"
version = "0.1.0"
authors = ["reison <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3 #release
lto = "fat"
codegen-units = 1

[dependencies]
num_cpus="1.10.1"
threadpool="1.7.1"
simplelog = "0.8"
log="0.4.8"
futures = "0.3.5"
serde_json = "1.0.53"
serde = {version="1.0.110",features = ["derive"]}
lazy_static = "1.4.0"
protobuf="2.14.0"
protoc-rust = "2.14.0"
protobuf-codegen="2.14.0"
async-std = "1.7"
http-types = "2.5"
async-h1 = "2.1"
net2 = "0.2.33"
redis = "0.15.1"
byteorder = "1.3.4"
anyhow = "1.0.31"
crossbeam ="0.8"
rayon = "1.3.1"
num_enum = "0.5.1"
async-trait = "0.1.41"
message-io = "0.14.2"
bincode = "1.3.3"
mio = {version="0.7",features = ["os-poll", "tcp"]}