[package]
name = "tools"
version = "0.1.0"
authors = ["reison <tijay830@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3 #release
lto = true
codegen-units = 1

#[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
#name = "helloworld-server"
#path = "src/rpc_server.rs"

#[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
#name = "helloworld-client"
#path = "src/rpc_client.rs"

[dependencies]
num_cpus="1.10.1"
threadpool="1.8.1"
simplelog = "0.10.0"
log="0.4"
serde_json = "1.0"
serde = {version="1.0",features = ["derive"]}
lazy_static = "1.4.0"
protobuf="2.23.0"
protoc-rust="2.23.0"
async-std = "1.7"
net2 = "0.2.33"
redis = "0.20"
byteorder = "1.3.4"
anyhow = "1.0.31"
crossbeam ="0.8"
rayon = "1.3.1"
num_enum = "0.5.1"
async-trait = "0.1.41"
chrono = "0.4"
tonic = "0.4"
prost = "0.7"
tonic-build = "0.4"
mio = {version = "1",features = ["os-poll", "net"]}
tokio = { version = "1", features = ["full"] }
axum = "0.6.0"
rand = "0.8"
message-io = "0.19.0"
bincode = "1.3.3"
once_cell = "1.16.0"
calamine = "0.20.0"
ureq = { version = "2.10.0", features = ["json","charset"] }
tokio-tungstenite = "0.27.0"
log4rs = "1.3.0"
async-lock = "3.4.0"
smol = "2.0.2"
url = "2.5.4"
futures-util = "0.3.31"
[build-dependencies]
tonic-build = "0.4"